objects/ASI_eForm_Leave_Request_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Date_From__c</fullName>
        <label>Date (From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Date_To__c</fullName>
        <label>Date (To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Leave_Reuest__c</fullName>
        <label>Leave Request</label>
        <referenceTo>ASI_eForm_Leave_Request__c</referenceTo>
        <relationshipLabel>Leave Request Details</relationshipLabel>
        <relationshipName>Leave_Request_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Leave_Type__c</fullName>
        <label>Leave Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>연차 휴가 Annual Leave Full</fullName>
                </value>
                <value>
                    <fullName>오전 연차 휴가 Annual Leave AM</fullName>
                </value>
                <value>
                    <fullName>오후 연차 휴가 Annual Leave PM</fullName>
                </value>
                <value>
                    <fullName>특별휴가 Special Leave</fullName>
                </value>
                <value>
                    <fullName>보건휴가 Menstruation Leave</fullName>
                </value>
                <value>
                    <fullName>출산 휴가 Maternity leave</fullName>
                </value>
                <value>
                    <fullName>병가 휴가 Sick Leave</fullName>
                </value>
                <value>
                    <fullName>보상 휴가 Compensation Leave</fullName>
                </value>
                <value>
                    <fullName>기타 휴가 Other Leave</fullName>
                </value>
                <value>
                    <fullName>결혼기념일 휴가 Wedding Anniversary</fullName>
                </value>
                <value>
                    <fullName>복직 Return to Work</fullName>
                </value>
                <value>
                    <fullName>육아휴직 Child-care unpaid leave of Absence</fullName>
                </value>
                <value>
                    <fullName>병가휴직 Sick Leave of Absence</fullName>
                </value>
                <value>
                    <fullName>기타휴직 Other leave of Absence</fullName>
                </value>
                <value>
                    <fullName>Home leave</fullName>
                </value>
                <value>
                    <fullName>예비군 훈련 Reserve forces training</fullName>
                </value>
                <value>
                    <fullName>장기 근속 포상 휴가 Long term service leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_No_of_Days__c</fullName>
        <label>No. of days</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Reason__c</fullName>
        <inlineHelpText>Sick Leave &amp; Leave of Absence, please provide reason</inlineHelpText>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Leave Request Detail</label>
    <nameField>
        <displayFormat>LRA-{000000}</displayFormat>
        <label>ASI_eForm_Leave_Request_Line_Item_Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Request Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_Leave_Request_Line_Item</fullName>
        <active>true</active>
        <label>Leave Request Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_KR_Check_LOA</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ASI_eForm_Leave_Reuest__r.ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Is_Salesman__c = True &amp;&amp; (ISPICKVAL( ASI_eForm_Leave_Type__c ,&apos;기타휴직 Other leave of Absence&apos;) ||ISPICKVAL( ASI_eForm_Leave_Type__c ,&apos;병가휴직 Sick Leave of Absence&apos;)||ISPICKVAL( ASI_eForm_Leave_Type__c ,&apos;육아휴직 Child-care unpaid leave of Absence&apos;))&amp;&amp; (ASI_eForm_Reason__c==null|| ASI_eForm_Reason__c==&apos;&apos;),true,false)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Reason__c</errorDisplayField>
        <errorMessage>Reason for Leave of Absence required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkDays90</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(ASI_eForm_Leave_Type__c, &apos;출산 휴가 Maternity leave&apos;) &amp;&amp; ASI_eForm_No_of_Days__c  &lt;&gt;  90, True, False)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_No_of_Days__c</errorDisplayField>
        <errorMessage>출산 휴가 Maternity leave  - Must enter 90 days</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkMaxDays180</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (ISPICKVAL( ASI_eForm_Leave_Type__c , &apos;병가휴직 Sick Leave of Absence&apos;) || ISPICKVAL( ASI_eForm_Leave_Type__c , &apos;기타휴직 Other leave of Absence&apos;)) &amp;&amp;  ASI_eForm_No_of_Days__c  &gt; 180 ,  ASI_eForm_No_of_Days__c  &gt; 180, null)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_No_of_Days__c</errorDisplayField>
        <errorMessage>Maximum of 180 days only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkMaxDays365</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL( ASI_eForm_Leave_Type__c , &apos;육아휴직 Child-care unpaid leave of Absence&apos;)&amp;&amp; ASI_eForm_No_of_Days__c &gt; 365, true, false)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_No_of_Days__c</errorDisplayField>
        <errorMessage>Maximum of 365 days only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkMustHalfDay</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (ISPICKVAL( ASI_eForm_Leave_Type__c , &apos;오전 연차 휴가 Annual Leave AM&apos; )||ISPICKVAL( ASI_eForm_Leave_Type__c , &apos;오후 연차 휴가 Annual Leave PM&apos; )) &amp;&amp;  (ASI_eForm_Date_From__c  &lt;&gt;  ASI_eForm_Date_To__c  ||  ASI_eForm_No_of_Days__c  &lt;&gt; 0.5), True, False)</errorConditionFormula>
        <errorMessage>Annual Leave AM / PM must be 0.5 day / Start and end date must be on the same day</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkNegative</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ASI_eForm_No_of_Days__c  &lt; 0, TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_No_of_Days__c</errorDisplayField>
        <errorMessage>No. of days cannot input negative numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkNotHalfDay</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL(ASI_eForm_Leave_Type__c,&apos;연차 휴가 Annual Leave Full&apos;)&amp;&amp;((FLOOR(ASI_eForm_No_of_Days__c)&lt;&gt;ASI_eForm_No_of_Days__c)||ASI_eForm_No_of_Days__c = 0))||(ISPICKVAL(ASI_eForm_Leave_Type__c,&apos;보건휴가 Menstruation Leave&apos;)&amp;&amp;((FLOOR( ASI_eForm_No_of_Days__c)&lt;&gt;ASI_eForm_No_of_Days__c)||ASI_eForm_No_of_Days__c = 0))||(ISPICKVAL(ASI_eForm_Leave_Type__c,&apos;특별휴가 Special Leave&apos;)&amp;&amp;((FLOOR( ASI_eForm_No_of_Days__c)&lt;&gt;ASI_eForm_No_of_Days__c)||ASI_eForm_No_of_Days__c = 0)), True, False)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_No_of_Days__c</errorDisplayField>
        <errorMessage>0.5 day not allowed for the corresponding Leave Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkReasonMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL(ASI_eForm_Leave_Type__c,&apos;병가 휴가 Sick Leave&apos;)||ISPICKVAL(ASI_eForm_Leave_Type__c,&apos;보상 휴가 Compensation Leave&apos;)||ISPICKVAL(ASI_eForm_Leave_Type__c,&apos;기타 휴가 Other Leave&apos;)||ISPICKVAL(ASI_eForm_Leave_Type__c,&apos;기타휴직 Other leave of Absence&apos;)) &amp;&amp; ASI_eForm_Reason__c ==null , True, False)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Reason__c</errorDisplayField>
        <errorMessage>Please enter reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkReturnToWork</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(ASI_eForm_Leave_Type__c, &apos;복직 Return to Work&apos;)&amp;&amp;ASI_eForm_No_of_Days__c&lt;&gt;0,True,False)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_No_of_Days__c</errorDisplayField>
        <errorMessage>Please enter 0 in No. of days field in case of Return to Work</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkStartEnd</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_eForm_Date_From__c  &gt; ASI_eForm_Date_To__c</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Date_To__c</errorDisplayField>
        <errorMessage>End date cannot be earlier than Start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkZero</fullName>
        <active>true</active>
        <errorConditionFormula>IF((!ISPICKVAL( ASI_eForm_Leave_Type__c , &apos;복직 Return to Work&apos;)) &amp;&amp; ASI_eForm_No_of_Days__c == 0 , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_No_of_Days__c</errorDisplayField>
        <errorMessage>No. of days cannot input 0</errorMessage>
    </validationRules>
</CustomObject>